# genesys-cx-demo-harness

./: .dockerignore  .env.example  .gitignore  BE-5.md  BUILD.md  CLAUDE.md  DEPLOY_UNRAID.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.data/postgres/: postmaster.pid
alembic/: env.py  script.py.mako
alembic/versions/: 0001_tenant_and_customer_spine.py  0002_tenant_config_json.py  0003_network_and_devices.py  0004_seed_keys_and_scenario_events.py  0005_event_store.py  0006_device_kind_and_orders.py
app/: __init__.py  config.py  db.py  logging.py  main.py
contracts/: csat.json  customer-context.json  device-action.json  devices.json  interaction-event.json  net-diagnostics.json  net-status.json  offers.json  order-action.json  telemetry.json  verify-customer.json
deploy/: .env.example  README.md  docker-compose.unraid.yml
docs/: TESTING.md
phases/: BE-0.md  BE-1.md  BE-2.md  BE-3.md  BE-4.md
scripts/: demo_be0.sh  demo_be1.sh  demo_be2.sh  demo_be3.sh  demo_be4.sh  demo_be5.sh  demo_be6.sh
tests/: __init__.py  conftest.py  test_admin_api.py  test_admin_auth.py  test_auth.py  test_coverage.py  test_events_store.py  test_gx_ava.py  test_gx_contracts.py  test_gx_coverage.py  test_gx_customer_context.py  test_gx_devices.py  test_gx_events.py  test_gx_network.py  test_gx_normalize.py  test_gx_offers.py  test_gx_orders.py  test_gx_verify.py  test_health.py  test_network_faults.py  test_scenarios_engine.py  test_seed.py  test_seed_network.py  test_v1_core.py
(+345 files in other folders)
